--- a/references.bib
+++ b/references.bib
@@ -4360,6 +4360,13 @@
   url		= {https://www.reddit.com/r/dataisbeautiful/comments/3mp9r7/comment/cvi19ly}
 }
 
+@Manual{wickham2023,
+    title = {dplyr: A Grammar of Data Manipulation},
+    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+    year = {2023},
+    note = {R package version 1.1.4},
+    url = {https://CRAN.R-project.org/package=dplyr},
+  }
 @Book{		  wickham2016,
   author	= {Hadley Wickham},
   title		= {ggplot2: Elegant Graphics for Data Analysis (2e)},
