--- a/problems.Rmd
+++ b/problems.Rmd
@@ -198,13 +198,13 @@ However, I propose a different perspective: if we instead model plots as a bijec
 
 #### Products of partitions {#products-of-partitions}
 
-While all plots inherently involve at least one partition which defines the mapping between the underlying data and the geometric objects, many plot types partition the underlying data across multiple dimensions. Specifically, multiple variables may be used to partition the data, such that each data point is mapped to the unique combination of these variables. This multidimensional partitioning is particularly prevalent in interactive data visualization, where features such as linking automatically introduce an additional partitioning variable [@wilhelm2008]. Consequently, a generalized mechanism for deriving Cartesian products of partitioning variables is required.
+Every plot involves at least one partition that establishes the connection between data and geometric objects. However, many plot types also divide data across multiple dimensions using several partitioning variables. Each data point is then associated with a unique combination (Cartesian product) of these variables. This multidimensional partitioning is particularly common in interactive data visualization, where features such as linking inherently add level of partitioning [@wilhelm2008]. Therefore, it is important to briefly discuss the idea of taking Cartesian products of partitioning variables. While the material might seem simple, I encourage the reader to bear with me as it will become important later.
 
-The idea of partition products may be best illustrated on concrete code examples. In R, the canonical data structure for creating a grouping structure (partition) is the S3 `factor` class. We can use `factor`s to partition our data and compute various aggregate summaries over the parts: 
+The idea of partition products may be best illustrated on concrete code examples. First, let's start with an example of a simple partition. In R, the canonical data structure for creating a grouping structure (partition) is the S3 `factor` class. We can use `factor`s to partition our data and compute various aggregate summaries over the parts: 
 
 ```{r}
 group <- factor(c("A", "A", "A", "B", "B", "C", "C", "C"))
-income <- c(170, 150, 200, 300, 150, 100, 220, 140)
+income <- c(170, 150, 200, 300, 150, 230, 220, 140)
 age <- c(20, 32, 45, 19, 67, 42, 35, 32)
 
 split(data.frame(income, age), group)
@@ -212,7 +212,18 @@ aggregate(cbind(income, age) ~ group, FUN = mean)
 aggregate(cbind(income, age) ~ group, FUN = sum)
 ```
 
-With multiple partitioning variables, we can compute summary statistics on finer segments of our data. While base R does not have a standalone data structure for products of multiple `factor`s^[It is not too difficult to create this data structure: see Section \@ref(product-factors).], many built-in functions create this data structure implicitly, when supplied with `list()` or formula arguments (using the `+` operator on the right-hand side of the formula to define the product): 
+Once we partition our data and compute the summaries, we can visualize them as geometric objects in a plot. For instance, we could render the summarized data above as a simple barplot using `ggplot2` [@wickham2016]:
+
+```{r}
+library(ggplot2)
+df <- aggregate(income ~ group, FUN = sum)
+
+ggplot(df, aes(group, income)) +
+  geom_col(fill = "#1F78B4") +
+  labs(x = "Group", y = "Sum of income")
+```
+
+However, there is only so much we can glean from our data with simple partitions like the one above. When we have multiple partitioning variables, we can investigate more granular subsets of our data by taking their product. While base R does not have a standalone data structure for products of multiple `factor`s^[It is not too difficult to create this data structure: see Section \@ref(product-factors).], many built-in functions create this data structure implicitly, when supplied with `list()` or formula arguments (using the `+` operator on the right-hand side of the formula to define the product): 
 
 ```{r}
 gender <- factor(c("M", "F", "F", "M", "F", "M", "F", "F"))
@@ -221,38 +232,41 @@ aggregate(cbind(income, age) ~ group + gender, FUN = mean)
 aggregate(cbind(income, age) ~ group + gender, FUN = sum)
 ```
 
-Now, clearly, products of partitions are useful because they allow us to compute summary statistics at greater level of granularity, and this is particularly useful in data visualization. For instance, here's how we could use `ggplot2` [@wickham2016] to display the aggregated data above via a stacked barplot:
+These product partitions can also be visualized, to display our data at a greater level of details (for instance, as a stacked barplot):
 
 ```{r}
-library(ggplot2)
 df <- aggregate(income ~ group + gender, FUN = sum)
+
 ggplot(df, aes(group, income, fill = gender)) +
-  geom_col() +
+  geom_col(col = "white") +
   scale_fill_manual(values = c("#1F78B4", "#E31A1C")) +
-  labs(x = "Group", y = "Income", fill = "Gender")
+  labs(x = "Group", y = "Sum of income", fill = "Gender")
 ```
 
-In fact, these partition products are so useful that many data visualization systems [particularly ones based on the Grammar of Graphics, @wilkinson2012], construct them automatically, based on plot specification. For instance, we could produce the same plot without having to explicitly aggregate the data ourselves by running the following `ggplot` call:
+In fact, Cartesian products of partitions are so useful and ubiquitous in data visualization that many data visualization systems [particularly ones based on the Grammar of Graphics, @wilkinson2012] construct them automatically. For instance, we can produce the exact same plot without having to explicitly aggregate the data ourselves, by running the following `ggplot` call:
 
 ```{r}
 df <- data.frame(group, gender, income)
+
 ggplot(df, aes(group, income, fill = gender)) +
-  geom_bar(stat = "summary", fun = "sum") +
+  geom_bar(stat = "summary", fun = "sum", col = "white") +
   scale_fill_manual(values = c("#1F78B4", "#E31A1C")) +
   labs(x = "Group", y = "Income", fill = "Gender")
 ```
 
-It is useful to pause and analyze what is happening here. The `ggplot` function takes the variables specified inside the `aes` call and uses these to construct a grouping structure (partition), by taking their product. Importantly, it also automatically infers which variables are meant to form the grouping structure, and which are meant to be aggregated over this structure. For instance, in the example above, the `income` variable is *not* included in the partition product, since it is a continuous variable mapped to the y-axis, and this, in combination with the geometric object (`geom_bar`), marks it as the variable to be aggregated. See also the following code comment:
+It is worth taking a moment to analyze what is happening inside the `ggplot` call. The function takes the variables specified inside the `aes` call and constructs a Cartesian product of partitions. Importantly, it also automatically infers which variables should be used to construct the product and which should instead be aggregated over it. For instance, in the example above, the `income` variable is *not* included in the product. This is because it is a continuous variable mapped to the y-axis, and this, in combination with the geometric object (`geom_bar`), marks it as a an aggregation variable. This behavior is described in the `ggplot2` codebase in the following code comment:
 
 > If the `group` variable is not present, then a new group variable is generated from the interaction of all discrete (factor or character) vectors, excluding `label`.
 >
 > [`grouping.R` file, `ggplot2` codebase](https://github.com/tidyverse/ggplot2/blob/f46805349d6ca8ca7a99f8966cfa0f29279c2f6c/R/grouping.R#L7) [@wickham2016]
 
+Thus, clearly, products of partitions are a fundamental building block of graphics. However, an important thing to discuss is that there are actually two different ways we view products [see @wilkinson2012, pp. 64]. First, there is the simple, commutative view where the order of variables in the product does not matter. In other words, these types of products form a simple, "flat" structure with no hierarchical dependencies. Second, we can also view products as nesting, which does establish a hierarchy. While flat partitions are sufficient to describe for many types of visualizations, some plot types require this hierarchical structure. This issue will be discussed in greater depth in the following section.
+
 #### Limits of flat product partitions
 
-For a fair number of common plots, a single "flat" (not hierarchical) product of all factors/partitions works reasonably well. However, for other types of plots, this simple model is not enough. Specifically, certain types of plots exhibit hierarchical relationships between the partitions which cannot be represented under this flat model [see also @slingsby2009; @wu2022].
+As mentioned in the previous section, a fair number of common plots can be represented via a single flat product of all of the partitioning variables. However, for other types of plots, this simple model is not sufficient. Specifically, certain types of plots exhibit hierarchical dependencies which cannot be represented under this flat model [see also @slingsby2009; @wu2022].
 
-To give a concrete example, let's turn back to the barplot from the previous section (Section \@ref(plots-as-partitions)). To draw the barplot, we first split our data into smaller tables, summarize each table by summing the values, stack the summaries by taking their cumulative sum, and finally use the result to render bar segments. This gave us a stacked barplot, which is a good visualization for comparing absolute counts across categories.
+To give a concrete example, let's turn back to the barplot from the previous section (Section \@ref(plots-as-partitions)). To draw the barplot, we first split our data into smaller tables and summarized each table by summing the values. We then passed this data to the visualization library [`ggplot2`, @wickham2016], and represented it as a stacked barplot. This gave us a good visualization for comparing absolute counts across categories.
 
 However, what if, instead of comparing absolute counts, we wanted to compare proportions? It turns out there is another type of visualization, called the spineplot, which can be used to represent the same underlying data as a barplot, however, is much better suited for comparing proportions: 
 
@@ -264,16 +278,16 @@ knitr::include_graphics("./figures/barplot-spineplot.png")
 
 Like barplots, spineplots represent some summary statistic (usually counts), aggregated within the levels of a product of two categorical variables. However, unlike barplots, spineplots map the underlying statistics to both the y-axis position (height) and the bar width. Furthermore, the y-axis position is normalized, such that the heights of the different segments within the same category add up to one. This normalization makes it possible to compare the relative frequencies within categories directly (notice how the right panel in Figure \@ref(fig:barplot-spineplot) makes it obvious that the proportion of red cases within the B and C categories is the same). Thus, like the barplot, the spineplot is a valuable tool for visualizing categorical data, especially when we can use interactive features to switch from one type of representation to the other. 
 
-Although barplot and spineplot represent the same underlying data, turning one into the other is not always easy. Specifically, while many grammar-based visualization systems offer a simple declarative syntax for defining barplots, they lack such simple syntax for spineplots. For instance, to draw a spineplot in `ggplot2`, we first need to do a substantial amount of data wrangling (creating the plot in the right panel of Figure \@ref(fig:barplot-spineplot) took over 10 lines of data wrangling code, using standard `dplyr` syntax). This same hierarchical dependence applies to other "normalized" types of plots, such as spinograms, as well as innately hierarchical displays such as treemaps and mosaic plots [see e.g. @theus2002; slingsby2009].
+However, while barplot and spineplot represent the same underlying data, turning one into the other is not easy, and many common grammar-of-graphics-based visualization systems lack simple declarative means for defining spineplots. For instance, there is no built-in functionality for drawing spineplots in `ggplot2`; to draw the spineplot in the right panel of Figure \@ref(fig:barplot-spineplot) required over 10 lines of external data wrangling code [using standard `dplyr` syntax, @wickham2023]. But what makes spineplots so challenging? The reason for this is that there are hierarchical dependencies between the different components of the graphic [see also e.g. @mcdonald1990; @keller2024]. As a result spineplot cannot be represented by the simple flat partition product model underlying `ggplot2`. In other words, when rendering a spineplot, we cannot simply aggregate our data into a single flat table, without introducing a concept of SQL-like joins at some point. The same applies to other "normalized" types of plots, such as spinograms, as well as innately hierarchical displays such as treemaps and mosaic plots [see e.g. @theus2002; slingsby2009].
 
 ### Partitions, hierarchy, and preorders {#hierarchy}
 
-Why are spineplots so challenging? The primary reason is that they force us to confront the hierarchical nature of (interactive) graphics [@mcdonald1990; @keller2024]. Specifically, while in a barplot, we can get by with a single flat partition of the data, in a spineplot, the data is summarized and stacked *along and across* different levels of aggregation [@wu2024]:
+Thus, the core issue is that certain type of visualizations involve hierarchical dependencies or nesting which cannot be described by simple flat product partitions. Let's illustrate the point in more detail, by outlining the hierarchical dependencies in a spineplot. In a spineplot, the data is summarized and stacked *along and across* different levels of aggregation [see also @wu2024]:
 
-- Along the x-axis, we stack the summaries *across the levels of the top-level factor/category*
-- Along the y-axis, we stack the summaries *across the levels of a product of two factors* and normalize them by the values *within the levels of the top-level factor*.
+- Along the x-axis, we stack the summaries *across the levels of the top-level partitioning variable*
+- Along the y-axis, we stack the summaries *across the levels of a product of two partitioning variables* and normalize them by the values *within the levels of the top-level factor*.
 
-For example, assume we have a data set with two categorical variables, with $j$ and $k$ levels respectively. If we want to render a spineplot using these two variables, it is not enough to simply split our data into $j \cdot k$ tables. Instead, we need to partition our data twice: first, split it into $j$ tables, and second, split it into $j \cdot k$ tables. We also need to keep track of which of the $j$ tables on the first level of partitioning *corresponds* to each of the $j \cdot k$ smaller tables. This automatically induces a hierarchical relationship, where the resulting data subsets form a graph - specifically, a tree - see Figure \@ref(fig:spineplot-tree):
+For example, assume we have a data set with two categorical variables, with $j$ and $k$ levels respectively. If we want to render a spineplot using these two variables, it is not enough to simply split our data into $j \cdot k$ tables. Instead, we need to partition our data twice: first, split it into $j$ tables, and second, split it into $j \cdot k$ tables. We also need to keep track to which of the larger $j$ tables each of the smaller $j \cdot k$ tables relates to. This inherently induces a hierarchical relationship, where the resulting data subsets form a graph - specifically, a tree - see Figure \@ref(fig:spineplot-tree):
 
 ```{r spineplot-tree}
 #| echo: false
@@ -281,9 +295,9 @@ For example, assume we have a data set with two categorical variables, with $j$ 
 knitr::include_graphics("./figures/spineplot-tree.png")
 ```
 
-In \@ref(fig:spineplot-tree), each vertical level represents a data partition, and arrows indicate relationships between data subsets, such that a bar subset is composed of segment subsets, and the whole data set is in turn composed of bar subsets. This same tree can be used to represent both barplots and spineplots. For a stacked barplot, this tree structure can be implicit, since we can work with the lowest level of the partitioning only (the segments; ignoring details such as maintaining correct stacking order). However, for spineplots, this hierarchical structure is essential. In spineplots, we apply transformations *across* the levels of the hierarchy: we need to normalize the statistics corresponding to each segment by the values within the parent bar. This is only possible if each segment can reference its parent bar in some way.
+In \@ref(fig:spineplot-tree), each vertical level represents a data partition, and arrows indicate relationships between data subsets, such that a bar subset is composed of segment subsets, and the whole data set is in turn composed of bar subsets. This same tree can be used to represent both barplots and spineplots. For a stacked barplot, this tree structure can be implicit, since, hypothetically, we can work with the lowest level of the partitioning only (provided we can maintain the correct stacking order). However, for spineplots, this hierarchical structure is essential, since we need to apply transformations *across* the levels of the hierarchy: normalize the statistics corresponding to each segment by the values corresponding to the parent bar. This is only possible if each segment has a reference to its parent, necessitating a hierarchical structure.
 
-Thus, to be able to model a broad class of plots, we need a way to encode a hierarchical partitioning of our data. Furthermore, for reasons that will become clear later, it may be beneficial to introduce a more formal, mathematical framework for thinking about this hierarchy. A simple algebraic structure for encoding such class of hierarchies is a preorder.
+Thus, to model a broad class of plots, we need ways for encoding hierarchical partitioning of our data. Furthermore, for reasons that will become clear later, it may be beneficial to introduce a more formal, mathematical framework for thinking about this hierarchy. A simple algebraic structure for encoding such class of hierarchies is a preorder.
 
 #### Plots as preorders {#plots-as-preorders}
 
