--- a/problems.Rmd
+++ b/problems.Rmd
@@ -278,11 +278,11 @@ knitr::include_graphics("./figures/barplot-spineplot.png")
 
 Like barplots, spineplots represent some summary statistic (usually counts), aggregated within the levels of a product of two categorical variables. However, unlike barplots, spineplots map the underlying statistics to both the y-axis position (height) and the bar width. Furthermore, the y-axis position is normalized, such that the heights of the different segments within the same category add up to one. This normalization makes it possible to compare the relative frequencies within categories directly (notice how the right panel in Figure \@ref(fig:barplot-spineplot) makes it obvious that the proportion of red cases within the B and C categories is the same). Thus, like the barplot, the spineplot is a valuable tool for visualizing categorical data, especially when we can use interactive features to switch from one type of representation to the other. 
 
-However, while barplot and spineplot represent the same underlying data, turning one into the other is not easy, and many common grammar-of-graphics-based visualization systems lack simple declarative means for defining spineplots. For instance, there is no built-in functionality for drawing spineplots in `ggplot2`; to draw the spineplot in the right panel of Figure \@ref(fig:barplot-spineplot) required over 10 lines of external data wrangling code [using standard `dplyr` syntax, @wickham2023]. But what makes spineplots so challenging? The reason for this is that there are hierarchical dependencies between the different components of the graphic [see also e.g. @mcdonald1990; @keller2024]. As a result spineplot cannot be represented by the simple flat partition product model underlying `ggplot2`. In other words, when rendering a spineplot, we cannot simply aggregate our data into a single flat table, without introducing a concept of SQL-like joins at some point. The same applies to other "normalized" types of plots, such as spinograms, as well as innately hierarchical displays such as treemaps and mosaic plots [see e.g. @theus2002; slingsby2009].
+However, while barplot and spineplot represent the same underlying data, turning one into the other is not easy, and many common grammar-of-graphics-based visualization systems lack simple declarative means for defining spineplots. For instance, there is no built-in functionality for drawing spineplots in `ggplot2`; to draw the spineplot in the right panel of Figure \@ref(fig:barplot-spineplot) required over 10 lines of external data wrangling code [using standard `dplyr` syntax, @wickham2023]. But what makes spineplots so challenging? The reason for this is that there are hierarchical dependencies between the different components of the graphic [see also e.g. @mcdonald1990; @keller2024]. As a result spineplot cannot be represented by the simple flat partition product model underlying `ggplot2`. In the language of relational algebra, we cannot render a spineplot based on a single aggregated table of summaries which is in the third normal form [3NF, @codd1970]; to compute the normalized heights of bar segments, we need to compute and left-join parent data values, breaking the 3NF. Similar issues apply to other "normalized" types of plots, such as spinograms, as well as other innately hierarchical displays such as treemaps and mosaic plots [see e.g. @theus2002; slingsby2009].
 
 ### Partitions, hierarchy, and preorders {#hierarchy}
 
-Thus, the core issue is that certain type of visualizations involve hierarchical dependencies or nesting which cannot be described by simple flat product partitions. Let's illustrate the point in more detail, by outlining the hierarchical dependencies in a spineplot. In a spineplot, the data is summarized and stacked *along and across* different levels of aggregation [see also @wu2024]:
+Thus, a core issue is that certain types of visualizations exhibit hierarchical dependencies (nesting) which cannot be represented by simple, "flat" products of partitions. Let's illustrate the point in more detail, by outlining the hierarchical dependencies in a spineplot. In a spineplot, the data is summarized and stacked *along and across* different levels of aggregation [see also @wu2024]:
 
 - Along the x-axis, we stack the summaries *across the levels of the top-level partitioning variable*
 - Along the y-axis, we stack the summaries *across the levels of a product of two partitioning variables* and normalize them by the values *within the levels of the top-level factor*.
